# ad_board

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
advertisements/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
advertisements/migrations/: 0001_initial.py
config/: settings.py  tests_settings.py  urls.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
